--- a/css/common.css
+++ b/css/common.css
@@ -191,6 +191,7 @@
   color: #fff;
   line-height: 45px;
  }
+ 
  .nav .dropdown .dd{
   /* margin-top: 2px; */
   height: 465px;
@@ -243,3 +244,95 @@
   float: left;
  }
 
+.fotter{
+  height: 416px;
+  background-color: #f5f5f5;
+  padding-top: 30px;
+}
+
+.module_service{
+  height: 79px;
+  /* background-color: pink; */
+  border-bottom: 1px solid #555;
+}
+
+.module_service ul{
+ 
+}
+.module_service ul li{
+  height: 79px;
+  width: 240px;
+  float: left;
+}
+
+.module_service_icon{
+  float: left;
+  width: 50px;
+  height: 50px;
+  background: url(../images/icons.png) no-repeat;
+  margin-left: 10px;
+}
+
+.module_service_zheng_ping{
+  background-position:-253px -3px;
+}
+
+
+.module_service_ji_shu{
+  background-position: -255px -54px;
+}
+
+.module_service_wu_you{
+  background-position: -256px -104px;
+}
+
+.module_service_te_se{
+  background-position: -258px -156px;
+}
+
+.module_service_bang_zu{
+  background-position: -256px -208px;
+}
+.module_logo_title{
+  float: left;
+  margin-left: 10px;
+}
+
+.module_logo_title h3{
+  margin: 5px 0;
+}
+
+.module_help{
+  height: 187px;
+  border-bottom:1px solid #555;
+
+}
+
+.module_help_item{
+  float: left;
+  width: 200px;
+  height: 186px;
+  background-color: pink;
+  padding: 20px 0  0 30px;
+}
+
+.module_help_item dt{
+  font-size: 16px;
+  height: 25px;
+}
+
+.module_help_item dd{
+  height: 22px;
+}
+
+.module_help_item dd img{
+  margin: 7px 0;
+}
+
+.module_help_app dt{
+  margin-left: 10px;
+}
+
+.module_help_app p{
+  margin-left: 6px;
+}
